--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 1) Forms add new product/discount
  1.1) Product +
  1.2) Discount +
-2) Discounts page
+2) Discounts page +
 3) Edit/delete product as admin
 4) Edit/delete discount as admin
 5) Button pay must create in database new row with cart items
