--- a/TODO
+++ b/TODO
@@ -4,9 +4,10 @@
 2) Discounts page +
 2.1) Apply discounts to product +
 3) Edit/delete product as admin
-4) Edit/delete discount as admin
-5) Button pay must create in database new row with cart items
-6) History of all payment
+ 3.1) Delete
+ 3.2) Edit
+4) Button pay must create in database new row with cart items
+5) History of all payment
 
 
 
@@ -17,3 +18,4 @@ Improvements:
 4) Payment System
 5) History
 6) Favourite
+7) Edit/delete discount as admin
