Finish with update product

--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
-1) Forms add new product/discount
+1) Forms add new product/discount +
  1.1) Product +
  1.2) Discount +
 2) Discounts page +
 2.1) Apply discounts to product +
-3) Edit/delete product as admin
- 3.1) Delete
- 3.2) Edit
+3) Edit/delete product as admin +
+ 3.1) Delete +
+ 3.2) Edit +
 4) Button pay must create in database new row with cart items
 5) History of all payment
 
