--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
 3) Edit/delete product as admin +
  3.1) Delete +
  3.2) Edit +
-4) Button pay must create in database new row with cart items
+4) Button pay must create in database new rows with cart items +
 5) History of all payment
 
 
