History of orders

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@
  3.1) Delete +
  3.2) Edit +
 4) Button pay must create in database new rows with cart items +
-5) History of all payment
+5) History of all payment +
 
 
 
